[package]
name = "rollo-matter"
version = "0.1.0"
authors = ["Luro02 <24826124+Luro02@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native", "nightly"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
rs-matter = { git = "https://github.com/project-chip/rs-matter", rev = "32565ae", default-features = false, features = [
    "os",
    "openssl",
    "async-io",
] }

log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }


[build-dependencies]
embuild = "0.31.3"
